# busca-vagas-serpapi

./: .gitignore  README.md  pyproject.toml
busca_vagas_serpapi/: busca_vagas.py  fila_buscas.py  schemas.py  utils.py  utils_vagas.py
config/: parametros_buscas.yaml
